Added SEO things

--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -1,11 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-		<meta charset="utf-8" />
 		<title>Tivoli Cloud VR</title>
-		<base href="/" />
-		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link rel="icon" type="image/x-icon" href="/favicon.png" />
+		<base href="/" />
+		<meta charset="utf-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<meta name="title" content="Tivoli Cloud VR" />
+		<meta
+			name="description"
+			content="Human-centric virtual reality platform for everyone! 🌼🌺🌹"
+		/>
+		<meta
+			name="keywords"
+			content="vr, virtual reality, social vr, metaverse, virtual worlds, caitlyn meeks, maki deprez, fairies, cute"
+		/>
+		<meta name="robots" content="index, follow" />
+		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+		<meta name="language" content="English" />
 	</head>
 	<body>
 		<app-root></app-root>
