--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -18,6 +18,15 @@
 		<meta name="robots" content="index, follow" />
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 		<meta name="language" content="English" />
+		<meta property="og:url" content="https://alpha.tivolicloud.com" />
+		<meta
+			property="og:description"
+			content="Human-centric virtual reality platform for everyone! 🌼🌺🌹"
+		/>
+		<meta property="og:title" content="Tivoli Cloud VR" />
+		<meta property="og:type" content="website" />
+		<meta property="og:site_name" content="Tivoli Cloud VR" />
+		<meta property="og:image" content="/assets/logo-circle.png" />
 	</head>
 	<body>
 		<app-root></app-root>
