--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -25,7 +25,10 @@
 		/>
 		<meta property="og:title" content="Tivoli Cloud VR" />
 		<meta property="og:type" content="website" />
-		<meta property="og:image" content="/assets/logo-circle.png" />
+		<meta
+			property="og:image"
+			content="https://alpha.tivolicloud.com/assets/logo-circle.png"
+		/>
 	</head>
 	<body>
 		<app-root></app-root>
