--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -29,6 +29,7 @@
 			property="og:image"
 			content="https://alpha.tivolicloud.com/assets/logo-circle.png"
 		/>
+		<meta property="og:locale" content="en_US" />
 	</head>
 	<body>
 		<app-root></app-root>
