Disabled broken GoatCounter implementation

--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -30,7 +30,7 @@
 			content="https://alpha.tivolicloud.com/assets/logo-circle.png"
 		/>
 		<meta property="og:locale" content="en_US" />
-		<script>
+		<!-- <script>
 			(function() {
 				window.goatcounter = window.goatcounter || {};
 				window.goatcounter.vars = { no_onload: true };
@@ -42,7 +42,7 @@
 				var ins = document.getElementsByTagName("script")[0];
 				ins.parentNode.insertBefore(script, ins);
 			})();
-		</script>
+		</script> -->
 	</head>
 	<body>
 		<app-root></app-root>
