--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -5,7 +5,10 @@
 		<link rel="icon" type="image/x-icon" href="/favicon.png" />
 		<base href="/" />
 		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<meta
+			name="viewport"
+			content="width=device-width, initial-scale=0.8, maximum-scale=0.8"
+		/>
 		<meta name="title" content="Tivoli Cloud VR" />
 		<meta
 			name="description"
