Nametag staff icon is thinner now

--- a/server/assets/nametag.html
+++ b/server/assets/nametag.html
@@ -146,7 +146,7 @@
 	</div>
 	<div class="info">
 		{{#if staff}}
-		<div style="background: #e91e63;">
+		<div style="background: #e91e63; padding: 0 2px">
 			<svg class="icon" viewBox="0 0 128 128">
 				<circle fill="#e91e63" r="64" cx="64" cy="64" />
 				<path
