Updated metaverse to tivolicloud.com

--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -21,7 +21,7 @@
 		<meta name="robots" content="index, follow" />
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 		<meta name="language" content="English" />
-		<meta property="og:url" content="https://alpha.tivolicloud.com" />
+		<meta property="og:url" content="https://tivolicloud.com" />
 		<meta
 			property="og:description"
 			content="Human-centric virtual reality platform for everyone! 🌼🌺🌹"
@@ -30,13 +30,13 @@
 		<meta property="og:type" content="website" />
 		<meta
 			property="og:image"
-			content="https://alpha.tivolicloud.com/assets/logo-circle.png"
+			content="https://tivolicloud.com/assets/logo-circle.png"
 		/>
 		<meta property="og:locale" content="en_US" />
 		<script
 			async
 			defer
-			data-domain="alpha.tivolicloud.com"
+			data-domain="tivolicloud.com"
 			src="https://plausible.tivolicloud.com/js/plausible.js"
 		></script>
 	</head>
