Disabled plausable for now as it's down

--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -33,12 +33,12 @@
 			content="https://tivolicloud.com/assets/logo-circle.png"
 		/>
 		<meta property="og:locale" content="en_US" />
-		<script
+		<!-- <script
 			async
 			defer
 			data-domain="tivolicloud.com"
 			src="https://plausible.tivolicloud.com/js/plausible.js"
-		></script>
+		></script> -->
 	</head>
 	<body>
 		<app-root></app-root>
