--- a/server/assets/nametag.html
+++ b/server/assets/nametag.html
@@ -135,9 +135,7 @@
 					<img class="avatar" src="{{ userImage }}" />
 				</td>
 				{{#if displayName}}
-				<td class="username">
-					{{ displayName }}
-				</td>
+				<td class="username">{{ displayName }}</td>
 				{{/if}} {{#unless displayName}}
 				<td class="username">{{ username }}</td>
 				{{/unless}}
@@ -146,7 +144,7 @@
 	</div>
 	<div class="info">
 		{{#if staff}}
-		<div style="background: #e91e63; padding: 0 2px;">
+		<div style="background: #e91e63; padding: 0 2px">
 			<svg class="icon" viewBox="0 0 128 128">
 				<circle fill="#e91e63" r="64" cx="64" cy="64" />
 				<path
@@ -160,8 +158,8 @@
 			</svg>
 		</div>
 		{{/if}} {{#if supporter}}
-		<div style="background: #e91e63; padding-left: 2px; display: flex;">
-			<svg class="icon" viewBox="0 0 32 32" style="margin-top: 0px;">
+		<div style="background: #e91e63; padding-left: 2px; display: flex">
+			<svg class="icon" viewBox="0 0 32 32" style="margin-top: 0px">
 				<path
 					transform="translate(4,4)"
 					d="M12 21.35l-1.45-1.32C5.4 15.36 2 12.28 2 8.5 2 5.42 4.42 3 7.5 3c1.74 0 3.41.81 4.5 2.09C13.09 3.81 14.76 3 16.5 3 19.58 3 22 5.42 22 8.5c0 3.78-3.4 6.86-8.55 11.54L12 21.35z"
@@ -170,7 +168,7 @@
 			<span>supporter</span>
 		</div>
 		{{/if}} {{#if connected}}
-		<div style="background: #9c27b0;">
+		<div style="background: #9c27b0">
 			<svg class="icon" viewBox="0 0 640 512">
 				<path
 					d="M483.9 338.7L334.6 217.5l-30 27.5c-40.6 37.1-86.8 11.9-101.7-4.4-26.9-29.4-24.8-74.9 4.4-101.7L289.1 64h-83.8c-8.5 0-16.6 3.4-22.6 9.4L128 128H16c-8.8 0-16 7.2-16 16v191.9c0 8.8 7.2 16 16 16h130.3l90.5 81.9c27.4 22.3 67.7 18.1 90-9.3l.2-.2 17.9 15.5c15.9 13 39.4 10.5 52.3-5.4l31.4-38.6 5.4 4.4c13.7 11.1 33.9 9.1 45-4.7l9.5-11.7c11.2-13.8 9.1-33.9-4.6-45.1zM624 128H512l-54.6-54.6c-6-6-14.1-9.4-22.6-9.4h-85.9c-8 0-15.7 3-21.6 8.4l-98.3 90c-.1.1-.2.3-.3.4-16.7 15.7-16.3 40.6-2.1 56 9.6 10.5 35 21.6 56.1 2.7.1-.1.3-.1.4-.2l53-48.5 27-24.7c6.5-5.9 16.6-5.5 22.6 1s5.5 16.6-1 22.6l-26.1 23.9 145.6 118.2c12.2 9.9 19.5 23.5 22.2 37.9H624c8.8 0 16-7.2 16-16V143.9c0-8.8-7.2-15.9-16-15.9z"
@@ -178,7 +176,7 @@
 			</svg>
 		</div>
 		{{/if}} {{#if friend}}
-		<div style="background: #4caf50;">
+		<div style="background: #4caf50">
 			<svg viewBox="0 0 24 24">
 				<path
 					d="M16 11c1.66 0 2.99-1.34 2.99-3S17.66 5 16 5c-1.66 0-3 1.34-3 3s1.34 3 3 3zm-8 0c1.66 0 2.99-1.34 2.99-3S9.66 5 8 5C6.34 5 5 6.34 5 8s1.34 3 3 3zm0 2c-2.33 0-7 1.17-7 3.5V19h14v-2.5c0-2.33-4.67-3.5-7-3.5zm8 0c-.29 0-.62.02-.97.05 1.16.84 1.97 1.97 1.97 3.45V19h6v-2.5c0-2.33-4.67-3.5-7-3.5z"
@@ -186,11 +184,13 @@
 			</svg>
 		</div>
 		{{/if}} {{#if admin}}
-		<div style="background: #f44336;">admin</div>
-		{{/if}} {{#if displayName}}
+		<div style="background: #f44336">admin</div>
+		{{/if}} {{#if genderPronoun}}
+		<div style="background: #1d1f21">{{ genderPronoun }}</div>
+		{{/if}} {{#if showUsernameUnderneath}}
 		<div
 			class="actual-username"
-			style="background: #1d1f21; font-weight: 700;"
+			style="background: #1d1f21; font-weight: 700"
 		>
 			{{ username }}
 		</div>
