--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -12,7 +12,7 @@
 		<meta name="title" content="Tivoli Cloud VR" />
 		<meta
 			name="description"
-			content="Massive social platform for virtual reality and desktop 🌼🌺🌹"
+			content="Free and open-source metaverse to create positive social impact 🌼🌺🌹"
 		/>
 		<meta
 			name="keywords"
@@ -24,7 +24,7 @@
 		<meta property="og:url" content="https://tivolicloud.com" />
 		<meta
 			property="og:description"
-			content="Massive social platform for virtual reality and desktop 🌼🌺🌹"
+			content="Free and open-source metaverse to create positive social impact 🌼🌺🌹"
 		/>
 		<meta property="og:title" content="Tivoli Cloud VR" />
 		<meta property="og:type" content="website" />
