--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -33,6 +33,23 @@
 			content="https://tivolicloud.com/assets/logo-circle.png"
 		/>
 		<meta property="og:locale" content="en_US" />
+		<script type="application/ld+json">
+			{
+				"@context": "http://www.schema.org",
+				"@type": "Corporation",
+				"name": "Tivoli Cloud VR",
+				"url": "https://tivolicloud.com",
+				"logo": "https://tivolicloud.com/assets/logo-circle.png",
+				"image": "https://tivolicloud.com/assets/screenshots/silence.jpg",
+				"description": "Free and open-source metaverse to create positive social impact 🌼🌺🌹",
+				"address": {
+					"@type": "PostalAddress",
+					"addressLocality": "San Francisco",
+					"addressRegion": "California",
+					"addressCountry": "United States"
+				}
+			}
+		</script>
 		<script
 			async
 			defer
