Fixed plausible blocked by ublock

--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -54,7 +54,7 @@
 			async
 			defer
 			data-domain="tivolicloud.com"
-			src="https://plausible.tivolicloud.com/js/plausible.js"
+			src="66c2e6a0f3149850fd26.js"
 		></script>
 	</head>
 	<body>
