--- a/server/assets/world.html
+++ b/server/assets/world.html
@@ -16,9 +16,10 @@
 		<meta name="author" content="{{ username }}" />
 		<meta property="og:title" content="{{ name }}" />
 		<meta property="og:description" content="{{ description }}" />
-		<meta property="og:image" content="{{ worldImage }}" />
 		<meta property="profile:username" content="{{ username }}" />
 		{{/if}}
+		<meta property="og:type" content="website" />
+		<meta property="og:image" content="{{{ openGraphImage }}}" />
 		<link rel="icon" type="image/x-icon" href="{{ url }}/favicon.png" />
 		<meta charset="utf-8" />
 		<meta name="robots" content="noindex, nofollow" />
@@ -60,7 +61,7 @@
 						rgba(29, 31, 33, 0.6),
 						rgba(29, 31, 33, 0.6)
 					),
-					url({{worldImage}});
+					url({{{worldImage}}});
 				background-position: center;
 				background-repeat: no-repeat;
 				background-size: cover;
@@ -128,11 +129,11 @@
 			}
 
 			.status {
-				font-size: 3em;
+				font-size: 2.5em;
 				display: flex;
 				align-items: center;
 				border-radius: 4px;
-				padding: 5px 20px;
+				padding: 10px 30px;
 			}
 
 			.status.online {
@@ -165,16 +166,13 @@
 		{{/if}}
 		<div class="content">
 			{{#if notFound}}
-			<p style="font-size: 4em; font-weight: 500;">World not found</p>
-			<p style="font-size: 2em;">
-				Perhaps the link was mistyped
-			</p>
-			<div style="margin: 30px 0;"></div>
-			<a class="button lighter" href="{{ url }}">
-				Return to Tivoli
-			</a>
-			{{else}}
-			<p style="font-size: 4em; font-weight: 500;">
+			<p style="font-size: 4em; font-weight: 500">World not found</p>
+			<p style="font-size: 2em">Perhaps the link was mistyped</p>
+			{{#if renderPage}}
+			<div style="margin: 30px 0"></div>
+			<a class="button lighter" href="{{ url }}"> Return to Tivoli </a>
+			{{/if}} {{else}}
+			<p style="font-size: 4em; font-weight: 500">
 				{{#if private}}
 				<svg
 					xmlns="http://www.w3.org/2000/svg"
@@ -193,38 +191,40 @@
 				</svg>
 				{{/if}} {{ name }}
 			</p>
-			<p style="font-size: 2em;" class="author">
+			<p style="font-size: 2em" class="author">
 				Created by
 				<img
 					class="avatar"
-					src="{{ userImage }}"
+					src="{{{ userImage }}}"
 					alt="{{ username }}"
 				/>
 				<b>{{ username }}</b>
 			</p>
 			{{#if description}}
-			<div style="margin: 15px 0;"></div>
+			<div style="margin: 15px 0"></div>
 			<p class="description">{{ description }}</p>
-			{{/if}}
-			<div style="margin: 30px 0;"></div>
-			{{#if online}}
+			{{/if}} {{#if renderPage}}
+			<div style="margin: 30px 0"></div>
+			{{else}}
+			<div style="margin: 15px 0"></div>
+			{{/if}} {{#if online}}
 			<div class="status online">{{ users }}</div>
 			{{else}}
 			<div class="status offline">{{ users }}</div>
-			{{/if}}
-			<div style="margin: 30px 0;"></div>
+			{{/if}} {{#if renderPage}}
+			<div style="margin: 30px 0"></div>
 			<a class="button" href="tivoli://{{ id }}">
 				Launch Tivoli to world
 			</a>
 			<a
 				class="button"
-				style="background: none; font-size: 1em; opacity: 0.5;"
+				style="background: none; font-size: 1em; opacity: 0.5"
 				href="https://docs.tivolicloud.com"
 				target="_blank"
 			>
 				If you don't have Tivoli, get started here
 			</a>
-			{{/if}}
+			{{/if}}{{/if}}
 		</div>
 	</body>
 </html>
