--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -2,8 +2,37 @@
 <html lang="en">
 	<head>
 		<title>Tivoli Cloud VR</title>
-		<link rel="icon" type="image/x-icon" href="/favicon.png" />
 		<base href="/" />
+		<link
+			rel="apple-touch-icon"
+			sizes="180x180"
+			href="/assets/favicons/apple-touch-icon.png"
+		/>
+		<link
+			rel="icon"
+			type="image/png"
+			sizes="32x32"
+			href="/assets/favicons/favicon-32x32.png"
+		/>
+		<link
+			rel="icon"
+			type="image/png"
+			sizes="16x16"
+			href="/assets/favicons/favicon-16x16.png"
+		/>
+		<link rel="manifest" href="/assets/favicons/site.webmanifest" />
+		<link
+			rel="mask-icon"
+			href="/assets/favicons/safari-pinned-tab.svg"
+			color="#e91e63"
+		/>
+		<link rel="shortcut icon" href="/assets/favicons/favicon.ico" />
+		<meta name="msapplication-TileColor" content="#e91e63" />
+		<meta
+			name="msapplication-config"
+			content="/assets/favicons/browserconfig.xml"
+		/>
+		<meta name="theme-color" content="#e91e63" />
 		<meta charset="utf-8" />
 		<meta
 			name="viewport"
