--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -32,7 +32,7 @@
 			name="msapplication-config"
 			content="/assets/favicons/browserconfig.xml"
 		/>
-		<meta name="theme-color" content="#e91e63" />
+		<meta name="theme-color" content="#1d1f21" />
 		<meta charset="utf-8" />
 		<meta
 			name="viewport"
